src/deploy/kubernetes/example/callee-service/application/templates/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: callee-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/callee)$ $1/ redirect; #Redirect if traling slash is missing
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/callee"

#      more_set_headers "x-origin-tenant-id: 40a1cab6"; #Multi Tenancy
    # basic auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: authentication-secret
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ## TLS + HTTP2
  tls:
    - hosts:
        - goafabric.org
      secretName: server-certificate-secret
  rules:
#    - host: goafabric.org
    - http:
        paths:
          - path: /callee(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: callee-service-application
                port:
                  number: 50100
